hphp/hack/test/typecheck/class_abstract_final_8.php.exp
File "class_abstract_final_8.php", line 8, characters 12-14:
`Foo` is uninstantiable (Typing[4002])
File "class_abstract_final_8.php", line 3, characters 22-24:
Declaration is here
