hphp/hack/test/typecheck/class_abstract_final_8.php
<?hh

abstract final class Foo extends Exception {}

function f(mixed $x): void {
  try {
    throw new Exception('');
  } catch (Foo $y) {
  }
}
